# CargoTrack

./: .claudeignore  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  FUNDING.yml  LICENSE  Makefile  PRODUCT_BRIEF.md  README.md  buf.gen.yaml  buf.yaml  conftest.py  docker-compose.sandbox.yml  docker-compose.yml  openapi-generator-config.yaml  pytest.ini  requirements.txt
.claude/: settings.json  settings.local.json
accounts/: admin.py  api_urls.py  api_views.py  apps.py  forms.py  models.py  serializers.py  signals.py  totp_utils.py  urls.py  views.py
alerts/: admin.py  alert_manager.py  api_urls.py  api_views.py  apps.py  handlers.py  manager.py  models.py  serializers.py  urls.py  views.py
android/: settings.gradle
cargotrack/: api_urls.py  async_views.py  authentication.py  base_classes.py  cache.py  consumers.py  context_processors.py  csp.py  health.py  middleware.py  roles.py  routing.py  settings.py  urls.py  wsgi.py
carriers/: api_views.py  models.py
chats/: api_urls.py  api_views.py  consumers.py  serializers.py
coturn/: turnserver.conf
dashboard/: admin.py  api_urls.py  api_views.py  apps.py  dashboard.py  models.py  urls.py  views.py
docs/: API.md  api-reference.md  architecture.md  data-models.md  deployment.md  development.md  features.md  index.md  project-overview.md  services.md  webhook-events.md
elixir-ws/: .dockerignore  Dockerfile
fixtures/: seed.json
fleet/: api_views.py  models.py  serializers.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
go-tracking/: go.mod  main.go
libs/rust-core/: Cargo.toml
libs/rust-core/src/: lib.rs
marketplace/: api_urls.py  api_views.py  models.py
mobile/: app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json  tailwind.config.js
payments/: api_urls.py  (+2 more)
services/container-matcher/: Cargo.toml
services/container-matcher/src/: lib.rs
services/fuel-optimizer/: Cargo.toml
services/fuel-optimizer/src/: lib.rs
services/gps-ingest/: Cargo.toml  Dockerfile
services/gps-ingest/src/: config.rs  main.rs  models.rs
services/gps-ingest/src/geofence/: detector.rs  mod.rs
services/gps-ingest/src/kafka/: producer.rs
services/gps-ingest/src/mqtt/: mod.rs  subscriber.rs
services/gps-ingest/src/protocol/: concox.rs  meitrack.rs  mod.rs  teltonika.rs
services/route-optimizer/: Cargo.toml  Dockerfile  build.rs
services/route-optimizer/proto/: route_optimizer.proto
services/route-optimizer/src/: config.rs  main.rs  models.rs  server.rs
services/route-optimizer/src/cache/: lru.rs  mod.rs
services/route-optimizer/src/solver/: mod.rs  mvrp.rs  tsp.rs
(+662 files in other folders)
