[package]
name = "cargotrack-core"
version = "0.1.0"
edition = "2021"
description = "CargoTrack shared Rust types — used by gps-ingest, route-optimizer, and PyO3 crates"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
geo = "0.28"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
