[package]
name = "container-matcher"
version = "0.1.0"
edition = "2021"
description = "First-fit-decreasing bin-packing for LCL container consolidation — Python binding via PyO3"

[lib]
name = "container_matcher_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
