[package]
name = "gps-ingest"
version = "0.1.0"
edition = "2021"
description = "CargoTrack GPS telematics ingestion service — MQTT → Kafka bridge with geofencing"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
rdkafka = { version = "0.36", features = ["cmake-build"] }
geo = "0.28"
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
