[package]
name = "route-optimizer"
version = "0.1.0"
edition = "2021"
description = "CargoTrack Route Optimization Engine — TSP/MVRP solver with gRPC API"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
lru = "0.12"
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.12"

